All file link changed

--- a/gallery.html
+++ b/gallery.html
@@ -50,7 +50,8 @@ Author email: nidhiarivu@gmail.com
 <li class="nav-item @@contact__active">
   <a class="nav-link" href="contact.html">Contact</a>
 </li>
-</ul>				</div>
+</ul>			
+	</div>
 				<!-- toggle switch for light and dark theme -->
 												<div class="mobile-position w3DarkLight">
 					<nav class="navigation">
