Inventory.html files added

--- a/gallery.html
+++ b/gallery.html
@@ -216,6 +216,57 @@ Author email: nidhiarivu@gmail.com
             <li class="portfolio-item2 content" data-id="id-8" data-type="cat-item-2">
                 <span class="image-block">
                     <a class="image-zoom"
+                        href="assets/images/2016SNB.jpg"
+                        data-gal="prettyPhoto[gallery]">
+                        <div class="content-overlay"></div>
+                        <img src="assets/images/2016snow.jpg"
+                            alt="portfolio-img" class="img-fluid w3layouts agileits" style="width:100%; height:auto; display:block;">
+                        <div class="content-details fadeIn-bottom">
+                            <h3 class="content-title">
+                               Snow bowling competition                            </h3>
+                            <p class="content-text">
+                                Serba Dinamik snow bowling competition held in 2016.                  </p>
+                        </div>
+                    </a>
+                </span>
+            </li>
+            <li class="portfolio-item2 content" data-id="id-2" data-type="cat-item-1">
+                <span class="image-block">
+                    <a class="image-zoom"
+                        href="assets/images/2016BP.jpg"
+                        data-gal="prettyPhoto[gallery]">
+                        <div class="content-overlay"></div>
+                        <img src="assets/images/BukaPuasa2016.jpg"
+                            alt="portfolio-img" class="img-fluid w3layouts agileits" style="width:100%; height:auto; display:block;">
+                        <div class="content-details fadeIn-bottom">
+                            <h3 class="content-title">
+                               2016 Berbuka puasa celebration                        </h3>
+                            <p class="content-text">
+                               Serba Berbuka puasa celebration held in June 2016.</p>
+                        </div>
+                    </a>
+                </span>
+            </li>
+            <li class="portfolio-item2 content" data-id="id-1" data-type="cat-item-2">
+                <span class="image-block">
+                    <a class="image-zoom"
+                        href="assets/images/2015EM.jpg"
+                        data-gal="prettyPhoto[gallery]">
+                        <div class="content-overlay"></div>
+                        <img src="assets/images/2015EastMalay.jpg"
+                            alt="portfolio-img" class="img-fluid w3layouts agileits" style="width:100%; height:auto; display:block;">
+                        <div class="content-details fadeIn-bottom">
+                            <h3 class="content-title">
+                               East Malaysia Official Trip 2015                         </h3>
+                            <p class="content-text">
+                                East Malaysia(Sabah, Sarawak) Official Trip July 2015 for installing Restuarant POS software                   </p>
+                        </div>
+                    </a>
+                </span>
+            </li>
+             <li class="portfolio-item2 content" data-id="id-8" data-type="cat-item-2">
+                <span class="image-block">
+                    <a class="image-zoom"
                         href="assets/images/SNB2018.jpg"
                         data-gal="prettyPhoto[gallery]">
                         <div class="content-overlay"></div>
